<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.patientList.PatientsListFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/patients_list_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/patient_list_frag_toolbar"
                layout="@layout/toolbar_with_actions" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/patient_details_cLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            app:layout_constraintTop_toBottomOf="@+id/patients_list_app_bar"
            tools:layout_editor_absoluteX="10dp">

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/darkGray"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/lo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toTopOf="@id/separator1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/convergence"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:text="@string/patient_name"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/patient_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ellipsize="end"
                    android:fontFamily="@font/convergence"
                    android:maxLines="2"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@id/lo1"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/lo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toTopOf="@id/separator2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/convergence"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:text="@string/patient_ic"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/patient_ic_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ellipsize="end"
                    android:fontFamily="@font/convergence"
                    android:maxLines="4"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@id/lo2"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/lo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toTopOf="@id/separator3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/convergence"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:text="@string/patient_age"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/patient_age_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ellipsize="end"
                    android:fontFamily="@font/convergence"
                    android:maxLines="4"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/separator4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@id/lo3"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/lo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toTopOf="@id/separator4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/convergence"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:text="@string/patient_gender"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/patient_gender_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ellipsize="end"
                    android:fontFamily="@font/convergence"
                    android:maxLines="4"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/separator5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@id/lo4"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/lo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintTop_toTopOf="@id/separator5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:fontFamily="@font/convergence"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:text="@string/patient_disease"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/patient_diseases_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ellipsize="end"
                    android:fontFamily="@font/convergence"
                    android:maxLines="4"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/separator6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/darkGray"
                app:layout_constraintTop_toBottomOf="@id/lo5"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/patient_chart_data_layout"
            app:layout_constraintTop_toBottomOf="@id/patient_details_cLayout"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measured_data"
            android:textSize="@dimen/text_30sp"
            android:textAlignment="center"
            android:fontFamily="@font/convergence"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chart_data_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/patient_chart_data_layout"
            android:layout_margin="@dimen/margin_10"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/chart_data_row_item"
            />

        <TextView
            android:id="@+id/patient_chart_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/convergence"
            android:text="@string/measured_data"
            android:textAlignment="center"
            android:textSize="@dimen/text_30sp"
            android:layout_marginTop="@dimen/margin_15"
            app:layout_constraintTop_toBottomOf="@+id/chart_data_rv" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin_5"
            android:padding="@dimen/margin_5"
            app:layout_constraintTop_toBottomOf="@+id/patient_chart_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>